--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
         echo $HELM_BASE
         cd mscurrencyservice
         echo "CHART_DIR=$(pwd)" >> $GITHUB_ENV
-        sed -i 's/mscurrency_.*/'$IMAGE_TAG'"/g' values.yaml 
+        sed -i 's/mscurrencyimg_.*/'$IMAGE_TAG'"/g' values.yaml 
         grep tag values.yaml
         cd ../
         git add .
